--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".OneSignalClass"
+        android:name=".OneSignalAndOpenAds"
 
 
         android:allowBackup="true"
